--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "axios": "^0.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
-    "bens_ui_components": "^1.2.5",
+    "bens_ui_components": "^1.4.15",
     "bens_utils": "^1.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.3",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
