--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-flow": "^6.23.0",
     "bens_ui_components": "^1.4.51",
     "bens_utils": "^1.0.1",
+    "browserify": "^17.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "pg": "^8.7.3",
