--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "babel": "babel",
+    "build": "./make",
     "flow": "flow",
     "browserify": "browserify",
     "start": "node server/server.js"
@@ -23,13 +24,13 @@
     "axios": "^0.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
-    "bens_ui_components": "^1.4.51",
+    "bens_ui_components": "^1.4.65",
     "bens_utils": "^1.0.1",
     "browserify": "^17.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "pg": "^8.7.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
